# emanuel-programming-bitcoin

./: README.md  pyproject.toml
pybtc/: __init__.py  base58.py  constants.py  ecc.py  helper.py  opcodes.py  script.py  transaction.py
tests/: base58_test.py  ecc_test.py  helper_test.py  script_test.py  transaction_test.py
